--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "luckyy": "^1.0.4",
     "node-twitterbot": "^0.2.2",
     "request": "^2.88.2"
   }
