--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "author": "Ephraim Atta-Duncan",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
-    "node-twitterbot": "^0.2.2",
-    "request": "^2.88.2"
+    "luckyy": "^1.0.4",
+    "node-fetch": "^2.6.0",
+    "request": "^2.88.2",
+    "twitter": "^1.7.1"
   }
 }
